bisonc++ (2.10.00)

    * Replaced all FnWrap* calls by lambda function calls

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 19 Jun 2011 13:17:44 +0200

bisonc++ (2.09.02)

    * Repaired flaws that emerged with g++ 4.6

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 02 May 2011 16:30:43 +0200

bisonc++ (2.9.1)

  * Documentation requires >= Yodl 3.00.0

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 10 Nov 2010 10:30:51 +0100

bisonc++ (2.9.0)

  * Changed Errno::what() call to Errno::why()

  * Removed dependencies on Msg, using Mstreams and Errno::open
    instead. Consequently, bisonc++ depends on at least Bobcat 2.9.0

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 30 Oct 2010 22:05:30 +0200

bisonc++ (2.8.0)

  * Grammars having states consisting of items in which a reduction from a
    (series of) non-terminals is indicated have automatically a higher
    precedence than items in which a shift is required. Therefore, in these
    cases the shift/reduce conflict is solved by a reduce, rather than a
    shift.  See README.states-and-conflicts, srconflict/visitreduction.cc and
    the Bisonc++ manual, section 'Rule precedence' for examples and further
    information.  These grammars are now showing S/R conflicts, which remained
    undetected in earlier versions of Bisonc++. The example was brought to my
    attention by Ramanand Mandayam (thanks, Ramanand!).

  * To the set of regression tests another test was added containing a grammar
    having two S/R conflicts resulting from automatically selecting reductions
    rather than shifts. This test was named 'mandayam'.

  * Output generated by --verbose and --construction now shows in more detail
    how S/R conflicts are handled. The Bisonc++ manual also received an
    additional section explaining when reduces are used with certain S/R
    conflicts. 

  * Previously the documentation stated that --construction writes the
    construction process to stdout, whereas it is written to the same file as